# SKYRIM-SKILL-XP-NOTIFY

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  INSTALL_LOG.md  LICENSE  README.md  SkillXPNotify.ini.example  vcpkg.json  xmake.lua
.github/: release.yml
cmake/: clang-cl-xwin.cmake  preinclude.h
cmake/stub-directxtk/: directxtkConfig.cmake
cmake/triplets/: x64-windows-clang-cl-xwin.cmake
scripts/: package.sh  release-notes.sh
src/: CSFIntegration.cpp  CSFIntegration.h  Config.cpp  Config.h  Hook.cpp  Hook.h  HotkeyReload.cpp  HotkeyReload.h  Notify.cpp  Notify.h  Plugin.cpp  Throttle.cpp  Throttle.h  pch.h
